--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,47 +8,31 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnAuswählen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btnSelect"
         android:textSize="30sp"
-        android:clickable="false"
+        android:enabled="false"
         />
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
+        android:onClick="onItemClick"
+        />
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice">
+        android:adjustViewBounds="true"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/hintergrund"
+        android:contentDescription="@string/my_image_description"
+        />
 
-        <!--
-        <CheckedTextView
-            android:id="@+id/fotos"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/first"
-            android:textSize="20sp" />
-
-        <CheckedTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/second"
-            android:textSize="20sp" />
-
-        <CheckedTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/third"
-            android:textSize="20sp" />
-        -->
-    </ListView>
-
-
-    <!--
-    RadioButtons 3x
-    ImageView
-    -->
 
 </LinearLayout>
