--- a/app/src/main/res/layout/simple_list_item_multiple_choice.xml
+++ b/app/src/main/res/layout/simple_list_item_multiple_choice.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CheckedTextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    android:id="@+id/checkedTextView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textSize="20sp"
     android:textStyle="bold"
     android:textColor="#0000FF"
-    android:checkMark="?android:attr/listChoiceIndicatorMultiple">
+    android:text="Mini Image Viewer"
+    android:paddingLeft="15dp"
+    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+    style="@style/ListViewStyle"
+    >
 </CheckedTextView>
