--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
-        android:onClick="onItemClick"
-        />
+        android:choiceMode="singleChoice"/>
+        <!--android:onClick="onItemClick"-->
+
 
     <ImageView
         android:id="@+id/imageView"
